--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "config": "^3.3.11",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.6",
     "cookieparser": "^0.1.0",
     "cross-env": "^7.0.3",
@@ -24,6 +25,8 @@
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "express-router": "^0.0.1",
+    "express-session": "^1.18.0",
+    "flash": "^1.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.1",
     "nodemon": "^3.1.3",
